# DelogoHD

./: .clang-tidy  .gitignore  CMakeLists.txt  DelogoHD.sln  README.md  avs_interface.cpp  build.cmd  delogo_engine.add_sse4.cpp  delogo_engine.erase.cpp  delogo_engine.erase_sse4.cpp  delogo_engine.hpp  delogo_engine.preprocess.cpp  delogohd_filter.hpp  version.rc.in  vs_interface.cpp
.github/workflows/: ci.yml
DelogoHD/: DelogoHD.vcxproj  avs_interface.cpp  delogo_engine.hpp  delogohd_filter.hpp  version.hpp  vs_interface.cpp
DelogoHD/wrapper/: avs_filter.hpp  vs_filter.hpp
debian/: changelog  control  copyright  rules
include/: VSHelper.h  avisynth.h
include/avisynth/: avisynth.h
include/avisynth/avs/: config.h  cpuid.h
src/core/: aligned_buffer.hpp  canonical_math.hpp  delogo_engine.add.cpp  delogo_engine.add_sse4.cpp  delogo_engine.erase.cpp  delogo_engine.erase_sse4.cpp  delogo_engine.hpp  delogo_engine.preprocess.cpp  delogo_processor.cpp  delogo_processor.hpp  logo_file.cpp  logo_file.hpp  prepared_logo.cpp  prepared_logo.hpp  reciprocal_math.hpp  row_kernel.hpp  row_kernel_c.cpp  row_kernel_hwy.cpp  row_kernel_sse4.cpp
src/plugin/: delogohd_filter.cpp  delogohd_filter.hpp  plugin_entry.cpp
tests/baseline/: baseline_runner.py  test_baseline_runner.py
tests/baseline/assets/logos/: test-640x180.lgd
tests/baseline/cases/: compat.json  smoke.json
tests/baseline/golden/: compat.json  smoke.json
tests/baseline/golden/purec/: compat.json  smoke.json
tests/baseline/golden/simd/: smoke.json
tests/tools/: avs_frame_dump.cpp
wrapper/: avs_filter.hpp  vs_filter.hpp
